additional cleanup and adjustment or removal of unused classes and methods